Change History
==============

1.6.6 unreleased
----------------

- Provide compatibility with DateTime 3.
  [hannosch]

- Fixed "NameError: name 'plone_context_state' is not defined" when
  viewing a field with an override.  Other name errors were also
  possible.
  Issue #29
  [potar]

1.6.5 2011-07-12
----------------

- Backport save-data delete confirmation dialog from 1.7.
  [smcmahon]

- Fixed field removal in quick-edit mode for non-English sites.
  [hannosch]

1.6.4
-----

- Independent viewing of fields caused error in Plone 4.0.5+ when form had
  epilogue or prologue. Fix in 1.6.3 wasn't adequate. Fixes #330. Thanks
  Eggert Ehmke. [smcmahon]

1.6.3
-----

- Fixed typo in French translation file which prevented its compilation.
  [smcmahon]


- Form fields could not be independently viewed in Plone 4/4.1.
  [smcmahon]

1.6.2
-----

- Fixed issue with image captions not displaying in form prologue/epilogue
  [dextermilo]

1.6.1
-----

- Put the css, especially extra css for specific fields, into the
  style_slot.  (Backported from trunk.)
  Fixes http://plone.org/products/ploneformgen/issues/299
  [maurits]

- Make the setPrefix and setAction methods of the embedded view callable
  from restricted Python (so they can be used in templates).
  [davisagli]

- Make sure the fgTDefault expression gets evaluated with the field object
  as its expression context object when the field is viewed directly.
  (The field object is used when evaluating fgTDefault when viewing the entire
  form, but the form object was previously used when evaluating it when viewing
  the field, which was a problematic inconsistency.)
  [davisagli]

- Add Norwegian translations
  [mj]

1.6.0
-----

- Declare downloadSavedInput as z3 permission to be able to use it as 
  browser view permission in another package.
  [naro]
  
- Avoid deprecation warnings for InitializeClass in Plone 4.
  [hannosch]

- Fixed LinguaPlone compatibility in Plone 4. The form folder was missing